package decorator.model;

public interface Component {
    void operation();
}
